# Hackathon

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: auth.py  config.py  database.py  main.py  pyproject.toml  seed.py
backend/models/: __init__.py  chat.py  comment.py  friend_request.py  mood.py  peer_match.py  peer_message.py  post.py  therapist.py  therapist_intro_request.py  therapist_thread_message.py  user.py
backend/routers/: admin_router.py  auth_router.py  chat_router.py  friend_router.py  mood_router.py  peer_router.py  post_router.py  profile_router.py  therapist_dashboard_router.py  therapist_router.py
backend/services/: __init__.py  ai_chat_service.py  friend_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  CommunityPage.tsx  DashboardPage.tsx  LoginPage.tsx  MoodPage.tsx  PatientInsightsPage.tsx  PeerMatchPage.tsx  ProfilePage.tsx  TherapistSettingsPage.tsx  TherapistsPage.tsx
